# autonomy-payload

./: .gitignore  README.md
ap_autopilot_bridge/: CMakeLists.txt  README.md  package.xml
ap_autopilot_bridge/msg/: Status.msg
ap_autopilot_bridge/src/: mavlink.py
ap_health_monitor/: CMakeLists.txt  README.md  package.xml
ap_lib/: CMakeLists.txt
ap_lib/meshes/: 5th_2ss.stl  ImperialFighter.stl  TIE.stl  corvette.stl  maluminum_falcon.stl  polysoup.stl
ap_logging/: CMakeLists.txt  README.md  package.xml
ap_logging/src/: net_pose.py  recv_pose_rate.py
ap_master/: CMakeLists.txt  README.md
ap_master/launch/: bench.launch  empire.launch  master.launch  sitl.launch  sitl_field.launch  sitl_ns.launch  test.launch
ap_master/service/: init.d-script
ap_mavlink_bridge/: CMakeLists.txt  README.md  package.xml
ap_mavlink_bridge/src/: ap_mavlink_bridge.py  bridge.py  mavlink.py
ap_mission_planning/: CMakeLists.txt  README.md  package.xml
ap_mission_planning/src/: ctlr_select.py  swarm_manager.py
ap_msgs/: CMakeLists.txt  package.xml
ap_msgs/msg/: AltitudeSlot.msg  BehaviorGroupState.msg  BehaviorGroupStateStamped.msg  BehaviorParameters.msg  BehaviorState.msg  ControllerGroupState.msg  ControllerGroupStateStamped.msg  ControllerState.msg  FiringReport.msg  FiringReportStamped.msg  FormationOrder.msg  FormationOrderStamped.msg  MsgStat.msg  MsgStatList.msg  RedSwarmStateStamped.msg  RedVehicleState.msg  SwarmControlState.msg  SwarmFormationOrder.msg  SwarmFormationOrderStamped.msg  SwarmSearchOrder.msg  SwarmSearchOrderStamped.msg  SwarmSearchWaypoint.msg  SwarmSearchWaypointList.msg  SwarmStateStamped.msg  SwarmVehicleState.msg  VehicleIntent.msg
ap_net_bridge/: CMakeLists.txt  package.xml
ap_net_bridge/src/: aerial.py  gps_bcast_rxtx.py
ap_network_bridge/: CMakeLists.txt  README.md
ap_network_bridge/msg/: NetOdometry.msg  NetPoseStamped.msg  shared_lla.msg
ap_network_bridge/src/: acs_messages.py  acs_socket.py  aerial.py  network.py
ap_path_planning/: CMakeLists.txt  README.md  package.xml
ap_path_planning/launch/: controllers.launch  controllers_ns.launch
ap_path_planning/msg/: WaypointListStamped.msg
ap_path_planning/src/: better_than_gtri.py  (+7 more)
ap_perception/: CMakeLists.txt  README.md  package.xml
ap_safety_monitor/: CMakeLists.txt  README.md  package.xml
ap_safety_monitor/src/: safety.py
ap_safety_monitor/srv/: SetHealth.srv
ap_srvs/: CMakeLists.txt  package.xml
ap_tasks/: CMakeLists.txt  README.md
ap_test/: CMakeLists.txt
ap_test/ROS_unit/: test_safety.py
ap_test/launch/: test.launch
ap_traj_planning/: CMakeLists.txt  README.md  package.xml
deploy/: README.md  deploy.sh  devbox-installer.sh  expand.sh  init.d-script  install.sh  odroid-config  odroid-installer-13.10.sh  odroid-installer-14.04.sh  odroid-installer.sh  remediate-14.04.sh
extra/: README.md
lib/: setup.py
utils/: README.md  autopilot_demo.sh  bridge_config.sh  flight_tech.py  fti.py  ground_heartbeat.py  latency.py  launch_lib.sh  launch_payload.sh  launch_payload_container.sh  launch_term_in_netns.sh  mavlink_rate.py  mission_stats.py  net_parser.py  net_pose_parser.py  net_stats.py  repeater.py  slave_setup.py  takeoff_moniter.py  takeoff_monitor.py  telem_config.sh  visualizer.py  wifi_config.sh
(+69 files in other folders)
